<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/navmenu"
    >
<group android:checkableBehavior="single">
    <item
        android:title="@string/gtc"
        android:orderInCategory="1"
        android:icon="@drawable/candle"
        android:id="@id/candle"
        app:showAsAction="always"
        />
    <item
        android:title="@string/gtw"
        android:orderInCategory="2"
        android:icon="@drawable/penguin"
        app:showAsAction="always"
        android:id="@id/penguin"
        />
    <item
        android:title="@string/gbtl"
        android:icon="@drawable/santa"
        app:showAsAction="always"
        android:id="@id/santa"
        />
</group>


</menu>