<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ChatRoomActivity">

    <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".DetailsFragment"
        android:id="@id/fl"/>
    <ListView android:layout_height="match_parent" android:layout_width="match_parent"
        android:id="@id/lv">

    </ListView>
    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:columnCount="4"
        android:rowCount="3">
        <Button
            android:id="@id/send"
            android:layout_row="2"
            android:text="@string/send"
             />

        <EditText

            android:id="@id/textGoesHere"
            android:layout_width="188dp"
            android:layout_height="wrap_content"
            android:layout_row="2"
            android:layout_column="2"
            android:hint="@string/type"
            android:text="@string/textGoesHere"

            />

        <Button
            android:id="@id/recieve"
            android:layout_row="2"
            android:layout_column="3"
            android:text="@string/recieve"
            />

        </GridLayout>

</androidx.constraintlayout.widget.ConstraintLayout>