<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">




      <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical">



          <TextView
              android:layout_height="wrap_content"
              android:layout_width="match_parent"
              android:text="@string/enter_email"
              />
          <EditText
              android:id="@+id/email"
              android:layout_height="wrap_content"
              android:layout_width="match_parent"
              android:hint="@string/email"
              android:inputType="textEmailAddress"
                />
          <TextView
              android:layout_height="wrap_content"
              android:layout_width="match_parent"
              android:text="@string/enter_pwd"
              />
          <EditText
              android:id="@+id/pwd"
              android:layout_height="wrap_content"
              android:layout_width="match_parent"
              android:text=""
              android:inputType="textPassword"
              />

          <Button
              android:id="@+id/login"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:gravity="center_horizontal"
              android:text="@string/login"
              android:textAlignment="center"
              />
      </LinearLayout>








</androidx.constraintlayout.widget.ConstraintLayout>