<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DetailsFragment"
    android:id="@id/fl">

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:columnCount="2"
        android:rowCount="5">

        <TextView
            android:id="@id/msghere"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_row="0"
            android:layout_column="0"
            android:text="@string/message_here"
            android:textSize="25dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_row="1"
            android:layout_column="0"
            android:text="ID="
            android:id="@id/textid"
            android:textSize="25dp" />

        <CheckBox android:layout_row="2"
            android:layout_column="0"
            android:text="@string/isasendmessage"
            android:id="@id/fragchck"/>

        <Button
            android:text="@string/hide"
            android:layout_width="match_parent"
            android:layout_row="4"
            android:layout_column="0"
            android:id="@id/finishButton"/>

    </GridLayout>


</FrameLayout>