<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity"
        android:orientation="vertical"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:context=".MainActivity"
            android:orientation="horizontal"
            >
            <TextView
                android:layout_weight="1"
                android:gravity="fill"
                android:id="@+id/text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/look"
                android:textSize="30dp"
                />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:context=".MainActivity"
            android:orientation="horizontal"
            >
            <Button
                android:id="@+id/button"
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="fill"
                android:text="@string/click"

                />
            <checkbox
                android:id="@+id/checkbox"
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="fill"
                android:text="@string/check" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:context=".MainActivity"
            android:orientation="horizontal"
            >
            <ImageButton
                android:layout_weight="1"
                android:gravity="fill"
                android:src="@drawable/flag"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                />
            <Switch
                android:layout_weight="1"
                android:gravity="fill"
                android:id="@+id/switcher"
                android:layout_width="200dp"
                android:layout_height="34dp"
                android:text="@string/switcher"
                />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:context=".MainActivity"
            android:orientation="horizontal"
            >
            <EditText
                android:layout_weight="1"
                android:gravity="fill"
                android:id="@+id/edit_text"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/type" />
                android:InputType="textPersonName"
                />
        </LinearLayout>



    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>