<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ProfileActivity">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context=".MainActivity"
            android:orientation="vertical">

            <TextView
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:text="Your Profile"
                />
            <TextView
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:text="Your name:"
                />
            <EditText
                android:id="@+id/name"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:text="@string/name"
                android:inputType="textEmailAddress"
                />
            <TextView
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:text="Your email:"
            />
            <EditText
                android:id="@+id/email"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:text="@string/email"
                android:inputType="textEmailAddress"
                />
            <TextView
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:text="Your picture:"
                />
            <ImageButton
                android:src="@android:drawable/picture_frame"
                android:id="@+id/imgbtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:text="@string/login"
                android:textAlignment="center"
                />
            <TextView
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:text="Click the button above to take a picture"
                />

        </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>